--- a/sass/components-index/_aboutcompany-sec.scss
+++ b/sass/components-index/_aboutcompany-sec.scss
@@ -1,5 +1,6 @@
+/* about company*/
+
 .aboutcompany {
-  @extend .container;
   padding-top: 94px;
 }
 
@@ -39,8 +40,7 @@
   }
 }
 
-.company {
-  @extend .section-title;
+.section-title-company {
   align-items: center;
   text-align: center;
   padding-top: 27px;
@@ -48,7 +48,7 @@
   margin-top: 0;
   margin-bottom: 0px;
   background-color: rgba(47, 48, 58, 0.8);
-  color: var(--white);
+  color: $white;
   width: 370px;
   height: 70px;
   font-style: normal;
@@ -57,7 +57,6 @@
   letter-spacing: 0.03px;
 }
 
-.company:last-child {
-  @extend .section-item;
+.section-item.company:last-child {
   padding-right: 0px;
 }
