--- a/sass/components-index/_hero.scss
+++ b/sass/components-index/_hero.scss
@@ -18,11 +18,8 @@
   min-height: 600px;
   margin-left: auto;
   margin-right: auto;
-
-  .hero {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
+  padding-top: 0px;
+  padding-bottom: 0px;
 
   &-title {
     display: block;
@@ -33,8 +30,8 @@
     margin-top: 0px;
     padding-top: 196px;
     width: 646px;
-    color: var(--white);
-    font-family: var(--font-family);
+    color: $white;
+    font-family: $font-family;
     font-size: 44px;
     line-height: 60px;
     letter-spacing: 0.06px;
