--- a/sass/components-index/_modal.scss
+++ b/sass/components-index/_modal.scss
@@ -2,11 +2,11 @@
 .hero-buttom {
   display: inline-flex;
   padding: 10px 32px;
-  color: var(--white);
+  color: $white;
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.06px;
-  background-color: var(--blue);
+  background-color: $blue;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: 0px;
   border-radius: 4px;
@@ -21,7 +21,7 @@
   border-radius: 50%;
   right: -10px;
   top: -5px;
-  background: var(--white);
+  background: $white;
   border: none;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
@@ -33,10 +33,10 @@
   width: 18px;
   height: 18px;
   align-items: center;
-}
 
-.icon-button-close:hover {
-  fill: var(--blue);
+  &:hover {
+    fill: $blue;
+  }
 }
 
 .backdrop {
@@ -46,12 +46,12 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+}
 
-  .is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-  }
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
 
 .modal {
@@ -75,8 +75,7 @@
 
 .form-title {
   display: block;
-  justify-self: stretch;
-  width: 448px;
+  max-width: 700px;
   margin-bottom: 0px;
   font-family: $font-family;
   font-style: normal;
@@ -109,9 +108,11 @@
   margin: 0px;
   transform: translateY(-12%);
 
-  .comment {
-    top: 12%;
-    left: 10px;
+  &-comment {
+    position: absolute;
+    top: 10%;
+    left: 8px;
+    transform: translate(-3%, -12%);
   }
 }
 
@@ -125,11 +126,10 @@
   border-radius: 4px;
   outline: none;
 
-  .comment {
-    padding-left: 10px;
-    padding-top: 12px;
+  &-comment {
     width: 100%;
     height: 120px;
+    padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
   }
@@ -137,28 +137,31 @@
 
 .form-item:focus {
   outline: none;
-  border-color: var(--blue);
+  border-color: $blue;
 }
 
 .form-item:focus + .form-label {
-  color: var(--blue);
+  color: $blue;
+  border-color: $blue;
   transform: translate(-30px, -35px);
-  transition: var(--transition);
+  transition: 250ms linear, transform 500ms;
+}
+.form-item-comment:focus {
+  outline: none;
+  border-color: $blue;
 }
 
-.form-item:focus + .form-label.comment {
-  color: var(--blue);
-  transform: translate(-5px, -40px);
-  transition: var(--transition);
-}
-
-.form-item:focus + .form-label + .modal-icon {
-  fill: var(--blue);
+.form-item-comment:focus + .form-label-comment {
+  outline: none;
+  color: $blue;
+  border-color: $blue;
+  transform: translate(-1px, -40px);
+  transition: 250ms linear, transform 500ms;
 }
 
 .modal-icon {
   position: absolute;
-  fill: var(--very-dark-grey-color);
+  fill: $very-dark-grey-color;
   top: 30%;
   left: 10px;
   display: inline-block;
@@ -166,6 +169,12 @@
   height: 18px;
   transform: translateY(-15%);
 }
+
+.form-item:focus + .form-label + .modal-icon {
+  fill: $blue;
+  border-color: $blue;
+}
+
 .button-submit {
   position: relative;
   display: block;
@@ -174,11 +183,11 @@
   width: 200px;
   min-height: 50px;
   margin-top: 30px;
-  color: var(--white);
+  color: $white;
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.06px;
-  background-color: var(--blue);
+  background-color: $blue;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: 0px;
   border-radius: 4px;
@@ -212,16 +221,16 @@
 .checkbox label::before {
   height: 15px;
   width: 15px;
-  border: 1px solid var(--very-dark-grey-color);
+  border: 1px solid $very-dark-grey-color;
   left: 0px;
   top: 3px;
-  background-color: white;
+  background-color: $white;
 }
 .checkbox label::after {
   height: 5px;
   width: 9px;
-  border-left: 2px solid white;
-  border-bottom: 2px solid white;
+  border-left: 2px solid $white;
+  border-bottom: 2px solid $white;
   transform: rotate(-45deg);
   left: 4px;
   top: 7px;
@@ -236,11 +245,11 @@
 }
 
 .checkbox input[type="checkbox"]:checked + label::before {
-  background-color: var(--blue);
-  border-color: var(--blue);
+  background-color: $blue;
+  border-color: $blue;
 }
 
 .rules {
-  color: var(--blue);
+  color: $blue;
   text-decoration: underline;
 }
