--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,8 +1,9 @@
-.body {
-  font-family: $font-family;
-}
-
-*::before,
-*::after {
-  box-sizing: inherit;
-}
+@import "./utils/variables";
+@import "./components-index/container";
+@import "./components-index/body";
+@import "./components-index/main-logo";
+@import "./components-index/main-navigation";
+@import "./components-index/contacts-head";
+@import "./components-portfolio/filters";
+@import "./components-portfolio/projects";
+@import "./components-index/footer";
