--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,10 @@
           box-sizing: inherit;
 }
 
+.list {
+  list-style: none;
+}
+
 /*main logo*/
 .logo {
   display: -webkit-box;
@@ -719,6 +723,7 @@
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 0.03px;
+  list-style: none;
 }
 
 .section-item.company:last-child {
