--- a/sass/components-index/_aboutcompany-sec.scss
+++ b/sass/components-index/_aboutcompany-sec.scss
@@ -55,6 +55,7 @@
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 0.03px;
+  list-style: $list;
 }
 
 .section-item.company:last-child {
