--- a/sass/components-index/_advantages-sec.scss
+++ b/sass/components-index/_advantages-sec.scss
@@ -9,7 +9,7 @@
   padding-left: 0px;
   justify-content: space-between;
   font-family: $font-family;
-  color: $dark-grey-color;
+  color: $very-dark-grey-color;
   text-decoration: none;
   font-size: 14px;
   font-style: normal;
