--- a/sass/components-index/_section-options.scss
+++ b/sass/components-index/_section-options.scss
@@ -25,7 +25,7 @@
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.03px;
-    color: $dark-grey-color;
+    color: $very-dark-grey-color;
   }
 
   &-text {
