--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -195,7 +195,7 @@
   transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.items a a:hover, .items a a:focus {
+.items a:hover, .items a:focus {
   color: #2196f3;
 }
 
@@ -245,11 +245,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  text-align: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 26px;
-  text-align: center;
   letter-spacing: 0.03px;
 }
 
