--- a/sass/components-index/_contacts-head.scss
+++ b/sass/components-index/_contacts-head.scss
@@ -25,7 +25,8 @@
   text-decoration: none;
   color: $dark-grey-color;
   transition-property: background-color;
-  transition: $transition;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
