--- a/sass/components-index/_customers-sec.scss
+++ b/sass/components-index/_customers-sec.scss
@@ -22,7 +22,9 @@
     border: 1px solid #afb1b8;
     border-radius: 4px;
     transition-property: background-color;
-    transition: $transition;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     &:hover,
     &:focus {
       border-color: $blue;
