--- a/sass/components-index/_main-navigation.scss
+++ b/sass/components-index/_main-navigation.scss
@@ -42,7 +42,8 @@
       border-radius: 2px;
       transition: step-end;
       background-color: $blue;
-      transition: $transition;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
 
@@ -73,7 +74,8 @@
       height: 4px;
       border-radius: 2px;
       transition-property: background-color;
-      transition: $transition;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
 }
