--- a/sass/components-portfolio/_filters.scss
+++ b/sass/components-portfolio/_filters.scss
@@ -34,7 +34,8 @@
   border-radius: 4px;
   border: 0;
   transition-property: background-color;
-  transition: $transition;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
