--- a/sass/components-portfolio/_projects.scss
+++ b/sass/components-portfolio/_projects.scss
@@ -81,7 +81,8 @@ a {
   padding: 63px 24px;
   margin: 0px;
 
-  transition: $transition;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
 }
 .projects-elements {
