--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -116,8 +116,10 @@
   -webkit-transition: step-end;
   transition: step-end;
   background-color: #2196f3;
-  -webkit-transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link {
@@ -153,8 +155,10 @@
   border-radius: 2px;
   -webkit-transition-property: background-color;
   transition-property: background-color;
-  -webkit-transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*contacts */
@@ -191,8 +195,10 @@
   color: #757575;
   -webkit-transition-property: background-color;
   transition-property: background-color;
-  -webkit-transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .items a:hover, .items a:focus {
@@ -269,8 +275,10 @@
   border: 0;
   -webkit-transition-property: background-color;
   transition-property: background-color;
-  -webkit-transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-secondary:hover, .button-secondary:focus {
@@ -374,8 +382,10 @@ a {
   letter-spacing: 0.03px;
   padding: 63px 24px;
   margin: 0px;
-  -webkit-transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
 }
 
