--- a/sass/components-index/_aboutcompany-sec.scss
+++ b/sass/components-index/_aboutcompany-sec.scss
@@ -4,6 +4,10 @@
   padding-top: 94px;
 }
 
+a {
+  list-style: $list;
+}
+
 .works {
   display: flex;
   margin-left: 0px;
@@ -55,7 +59,6 @@
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 0.03px;
-  list-style: $list;
 }
 
 .section-item.company:last-child {
