--- a/sass/components-index/_modal.scss
+++ b/sass/components-index/_modal.scss
@@ -70,7 +70,9 @@
   border-radius: 4px;
 
   transform: translate(-50%, -50%);
-  transition: $transition;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .form-title {
