--- a/sass/components-index/_team-sec.scss
+++ b/sass/components-index/_team-sec.scss
@@ -58,7 +58,9 @@
       height: 44px;
       cursor: pointer;
       transition-property: background-color;
-      transition: $transition;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
       &:hover {
         .social-icon {
           fill: $white;
