--- a/sass/components-portfolio/_footer.scss
+++ b/sass/components-portfolio/_footer.scss
@@ -82,7 +82,9 @@
   margin-right: 10px;
   cursor: pointer;
   transition-property: background-color;
-  transition: $transition;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
 
   a:hover {
     background-color: $blue;
